generation please examine the code, improve it if necessary or call out to an
external command (such as "gpg --gen-random"). However, unless you are trying
to defend very sensitive traffic against snooping from determined and
well-equipped attackers I wouldn't worry too much. And if you are trying to do
that, Zebedee may not be the right choice for you anyway :-)

Numerous changes to the (English) documentation.

* Release 2.3.2 (2002/04/18)

Tunnel and target ports can now be suffixed with "/tcp" or "/udp" in order to
restrict the protocol used. This is useful when "ipmode both" is in effect.
So, for example a target of "localhost:5900-5910/tcp,daytime/udp" allows
TCP-only tunnels to 5900-5910 and UDP-only tunnels to the "daytime" port. When
the protocol is omitted either may be used.

Added support for UDP source address spoofing when run in "transparent" mode.
This makes source to target UDP traffic "transparent" but the target server
will be unlikely to be able to reply to any such datagrams received. Note that
this is not compiled in by default and requires the use of the "libnet"
library.

Added "readtimeout" to allow some defence against denial of service attacks.
If set to non-zero then remote data reads must be completed within this number
of seconds. This primarily affects the Zebedee protocol exchanges, idle
connection timeouts are handled through "idletimeout".

Added "no linger" and "keep alive" options to sockets accepted by client
or server in order to clean up better in the case of the peer hanging.

Modified "redirect" to support "redirect none" to turn off any default target
ports.

Rewrote the description of identity checking. Added further documentation
about server security issues.

Prohibit the default target from having an address mask. It's too confusing
otherwise!

Fix handling of TCP connections in mixed mode.

Fix short writes that show up on OpenBSD (thanks to Jon Leonard for this).
